Dodanie komponentów oraz komunikacji z zewnętrznymi api

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  background: url("./assets/clouds-summer-weather-5k-1b.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
