--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,14 @@
-<p>search works!</p>
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup.value)" class="form form-search">
+
+  <mat-form-field class="form-element ">
+    <input matInput placeholder="City name" formControlName="name">
+    <mat-error *ngIf="!formGroup.valid && formGroup.touched">
+      {{ titleAlert }}
+    </mat-error>
+  </mat-form-field>
+
+  <div class="form-element">
+    <button mat-raised-button color="primary" type="submit" class="button" [disabled]="!formGroup.valid">Submit</button>
+  </div>
+
+</form>
