--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,6 @@ body{
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
