--- a/src/app/components/main-wrapper/main-wrapper.component.html
+++ b/src/app/components/main-wrapper/main-wrapper.component.html
@@ -1,3 +1,3 @@
 <app-search *ngIf="!visableStateSpinner"></app-search>
 <app-progress-spinner *ngIf="visableStateSpinner"></app-progress-spinner>
-<app-weather-display *ngIf="!visableStateSpinner"></app-weather-display>
+<app-weather-display [weatherData]="weatherData"  *ngIf="!visableStateSpinner" class="app-weather-display"></app-weather-display>
