--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,10 @@ body{
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+@media (max-width: 700px) {
+  body {
+    font-size : 12px!important;
+  }
+}
